# cuda_class

./: .gitignore  README.md  nsight.sh
br_test/: CMakeLists.txt
br_test/src/: 2d_vector_test.cpp  asyncAPI_test.cu  class_test.cpp  cuda_device.cu  move_constructor_test.cpp  simpleZeroCopy_br.cu  test_align_up.cpp  test_malloc_host.cu
chapter1/: vec_add_cpu.c  vec_add_cpu.h  vec_add_gpu.cu  vec_add_gpu.h
chapter2/: hello.cu  matMul.cu  matMul_new.cu
chapter2/conv_sobelDetect/: CMakeLists.txt  conv_sobeldetect.md  conv_test.cu
chapter2/dropout_test/: brnote.md  dropout_test.cu  dropout_test.py
chapter2/guiyue/: bubble_sort.cpp  guiyue.cu  topK.cu
chapter2/matrix_transpose/: matrix_transpose.cu  matrix_transpose_note.md
chapter3/: cudamanaged_test.cu  nsight.sh  stream_test.cu  stream_test_multi_thread.cu  sync_note.md  unified_memory_test.cu
chapter4/: cublas.cu  cudnn.cu
chapter5/: CMakeLists.txt  bert_origin  bertmodel2onnx.py  brbuild.sh  check_model.py  note.md  onnx2trt_engine.cpp  onnx_model_to_trt_engine.py  onnx_to_tensorrt_engine.py  onnxruntime_bert.py  test.py  test_bert_model.py
chapter5/simple_trt_example/: pretain_unet_to_onnx.py
chapter6_7_plugin/: CMakeLists.txt  plugin_note.md  plugin_test.cu  quantize_note.md
chapter6_7_plugin/bert_trt_api/: .gitignore  README.md  calibrator.py  trt_helper.py
chapter6_7_plugin/bert_trt_api/LayerNormPlugin/: LayerNormPlugin.cu  LayerNormPlugin.h  Makefile  common.cuh
chapter6_7_plugin/trt_plugin_tutorial/: README.md  builder.sh  calibrator.py  log_fp16.txt  trt_helper.py
chapter6_7_plugin/trt_plugin_tutorial/LayerNormPlugin/: LayerNormPlugin.h
chapter6_7_plugin/trt_plugin_tutorial/LayerNormPlugin_base/: CMakeLists.txt  LayerNormPlugin.cu  LayerNormPlugin.h  Makefile
chapter6_plugin/: plugin_note.md  test_time_perf.py
chapter6_plugin/project_bert/TensorRT_HW_bert/TensorRT-main/LayerNormPlugin/: Makefile
chapter6_plugin/trt_plugin_tutorial/: builder.py  builder.sh  layer_norm_torch_test.py  trt_helper.py
chapter6_plugin/trt_plugin_tutorial/LayerNormPlugin/: LayerNormPlugin.cu  testLayerNormPlugin.py
chapter6_plugin/trt_plugin_tutorial/LayerNormPlugin_base/: LayerNormPlugin.h  testLayerNormPlugin.py  test_LayerNorm_kernel.cu
chapter8/: brnote.md
chapter9/: brnote.md
cuda_book_src/: test.cpp
cuda_book_src/chapter5/src/: 5_7.cu
src/: AoS.cu  SoA.cu  a.c  device_information.cu  divergence.cu  dynamic_parallelism.cu  freshman.h  global_variable.cu  helloworld.cu  matrix_mul.cu  matrix_multi_no_shared.cu  matrix_multi_shared_mem.cu  nest_hello_world.cu  pine_memory.cu  reduceInteger.cu  reduceUnrolling.cu  shared_memory_read_data.cu  sum_array_offset.cu  sum_arrays_timer.cu  sum_arrays_unified_memory.cu  sum_matrix.cu  sum_matrix2D.cu  transform_matrix2D.cu  unifined_mem_test.cu
